
DDMarlinPandora: Development package to integrate with DD4hep

  --------
 | v00-03 |
  --------

N. Nikiforou 17/02/2016
 - Merged changes from MalrinPandora 02-02-00 up to today (7c88d10)

  --------
 | v00-02 |
  --------


F.Gaede
 - enforce unique selection in getExtension(include,exclude)
   - throws exception if not unique
 - bug fix: eCalBarrelExtension -> eCalEndcapExtension
   for setting m_eCalEndCapInnerZ 
 - added DetType::FORWARD to excludeFlags for main calorimeters 
 - added DetType::AUXILIARY to excludeFlag for LCal ( exclude BeamCal )
 - DDTrackCreatorILD.cc :
   - added dd4hep units to parameters extracted from DD4hep 
   - protect against poor tracks ( ndf <0 or missing/poor parameters)
   - added debug printout for track selection



N.Nikiforou 12/02/2016:
  - Changed handling of Coil parameters: now the info is accessed from LayeredCalorimeterData 
    extensions attached to the drivers (Solenoid for CLICdp, SCoil02 for ILD).
  - Removed/commented out obsolete and unused auxilliary static functions

N.Nikiforou 11/02/2016 (pm):
  - Major overhaul using the detector type flags throught the package. No more string processor parameters
    to access detectors.
  - Protected some more against uncaught exceptions, but still more work needed
  - Added more static helper functions to access extensions by data type flags

N.Nikiforou 11/02/2016 (am):
  - Modified DDTrackCreatorILD to use det type flags. Dropped tracker/vertex detector name parameters
  - Modified DDTrackCreatorILD to actually access hits in fit (offset 2) which is the definition now. 
    

N.Nikiforou 10/02/2016:
  - Started using the new facility by DD4hep that allows the accessing of detectors based on their
    detector type flags. For now, just DDTrackCreatorCLIC was modified. The Marlin Processor parameters
    associated with the vertex and tracker will soon be removed.

N.Nikiforou 07/09/2015: