@@ -4,7 +4,17 @@ DDMarlinPandora: Development package to integrate with DD4hep
   --------
  | v00-03 |
   --------
+N. Nikiforou 19/02/2016
+ - Merged changes from ILDCaloDigi (MarlinReco rev. 5432) into DDCaloDigi. 
+   It incorporates changes to ILDCaloDigy by Daniel. The introduction of
+   parameters for the cell encoding fiels was not merged, since lcio files
+   produced with DDSim will have the standard conventions defined in 
+   the calorimeter segmentations
+ - Implemented access of subdetectors by DetType flags instead of strings
+ - Elevated missing ECal parameters to ERROR
+   
 
+  
 N. Nikiforou 17/02/2016
  - Merged changes from MalrinPandora 02-02-00 up to today (7c88d10)
 
